// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSlider.vue should match a snapshot 1`] = `

<div class="v-input v-input--slider">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: 32px;"
    >
      <div class="v-slider">
        <input role="slider"
               type="slider"
               value="0"
        >
        <div class="v-slider__track__container">
          <div class="v-slider__track"
               style="left: 7px; width: 100%;"
          >
          </div>
          <div class="v-slider__track-fill primary"
               style="width: 0%; left: 0px;"
          >
          </div>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should render component with thumbLabel and match a snapshot 1`] = `

<div class="v-input v-input--slider">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: 32px;"
    >
      <div class="v-slider">
        <input role="slider"
               type="slider"
               value="0"
        >
        <div class="v-slider__track__container">
          <div class="v-slider__track"
               style="left: 7px; width: 100%;"
          >
          </div>
          <div class="v-slider__track-fill primary"
               style="width: 0%; left: 0px;"
          >
          </div>
        </div>
        <div class="v-slider__thumb-container v-slider__thumb-container--show-label"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
          <div class="v-slider__thumb-label__container"
               style="display: none;"
          >
            <div class="v-slider__thumb-label">
              <span>
                0
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should render component with thumbLabel and match a snapshot 2`] = `

<div class="v-input v-input--slider">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: 32px;"
    >
      <div class="v-slider">
        <input role="slider"
               type="slider"
               value="0"
        >
        <div class="v-slider__track__container">
          <div class="v-slider__track"
               style="left: 7px; width: 100%;"
          >
          </div>
          <div class="v-slider__track-fill primary"
               style="width: 0%; left: 0px;"
          >
          </div>
        </div>
        <div class="v-slider__thumb-container v-slider__thumb-container--show-label"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
          <div class="v-slider__thumb-label__container"
               style="display: none;"
          >
            <div class="v-slider__thumb-label">
              <span>
                0
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should render component with ticks and match a snapshot 1`] = `

<div class="v-input v-input--slider v-input--slider--ticks">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: 32px;"
    >
      <div class="v-slider">
        <input role="slider"
               type="slider"
               value="0"
        >
        <div class="v-slider__track__container">
          <div class="v-slider__track"
               style="left: 7px; width: 100%;"
          >
          </div>
          <div class="v-slider__track-fill primary"
               style="width: 0%; left: 0px;"
          >
          </div>
        </div>
        <div class="v-slider__ticks-container">
          <span class="v-slider__tick"
                style="left: 25%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 50%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 75%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 100%;"
          >
          </span>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should render component with ticks and match a snapshot 2`] = `

<div class="v-input v-input--slider v-input--slider--ticks">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: 32px;"
    >
      <div class="v-slider">
        <input role="slider"
               type="slider"
               value="0"
        >
        <div class="v-slider__track__container">
          <div class="v-slider__track"
               style="left: 7px; width: 100%;"
          >
          </div>
          <div class="v-slider__track-fill primary"
               style="width: 0%; left: 0px;"
          >
          </div>
        </div>
        <div class="v-slider__ticks-container">
          <span class="v-slider__tick v-slider__tick--always-show"
                style="left: 25%;"
          >
          </span>
          <span class="v-slider__tick v-slider__tick--always-show"
                style="left: 50%;"
          >
          </span>
          <span class="v-slider__tick v-slider__tick--always-show"
                style="left: 75%;"
          >
          </span>
          <span class="v-slider__tick v-slider__tick--always-show"
                style="left: 100%;"
          >
          </span>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;
